--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <p>
         Текстовые документы, содержащие разметку на языке HTML (такие документы
-        традиционно имеют расширение <code>.html</code> или <code>.htm)</code>,
+        традиционно имеют расширение <code>.html</code> или <code>.htm</code>),
         обрабатываются специальными приложениями, которые отображают документ в
         его форматированном виде. Такие приложения, называемые «браузерами» или
         «интернет-обозревателями», обычно предоставляют пользователю удобный
