--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstart</title>
-    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <section>
       <p>
-        <span class="bold">HTML</span>
-        <span class="italic"
-          >(от англ. HyperText Markup Language — «язык гипертекстовой разметки»)
-        </span>
+        <b>HTML</b>
+        <i
+          >(от англ. HyperText Markup Language — «язык гипертекстовой
+          разметки»)</i
+        >
         — стандартизированный язык разметки документов во Всемирной паутине.
         Большинство веб-страниц содержат описание разметки на языке HTML (или
         XHTML). Язык HTML интерпретируется браузерами; полученный в результате
@@ -39,7 +39,7 @@
         использованием шифрования.
       </p>
 
-      <span class="bold">Содержание</span>
+      <b>Содержание</b>
       <ol>
         <li><a href="#razdel-1">Общее представление</a></li>
         <li><a href="#razdel-2">Браузеры</a></li>
@@ -58,7 +58,7 @@
         являющимися специалистами в области
         <a
           href="https://ru.wikipedia.org/wiki/%D0%92%D1%91%D1%80%D1%81%D1%82%D0%BA%D0%B0"
-          >вёрстки </a
+          >вёрстки</a
         >. HTML успешно справлялся с проблемой сложности SGML путём определения
         небольшого набора структурных и семантических элементов — дескрипторов.
         Дескрипторы также часто называют «тегами». С помощью HTML можно легко
