--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstart</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <section>
@@ -28,7 +29,7 @@
       </p>
 
       <p>
-        Язык XHTML является более <u>строгим вариантом HTML</u>, он следует
+        Язык XHTML является более <span class="underline">строгим вариантом HTML</span>, он следует
         синтаксису XML и является приложением языка XML в области разметки
         гипертекста.
       </p>
