--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <h3>Тариф минимум</h3>
-    <p class="price">9&nbsp;000<span>руб.</span></p>
-    <div class="description">
-      <p class="text">Шары 30 шт разноцветные  
-      <p class="text">Наклейка на машину  </p>
-      <p class="text">Фотосъемка<br>(15 обработанных фотографий оформленных в фотокнигу)</p>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lesson-7</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="card">
+      <h3 class="card-title">Тариф минимум</h3>
+      <p class="card-price">9&nbsp;000<span>руб.</span></p>
+      <ul class="card-description">
+        <li class="text">Шары 30 шт разноцветные</li>
+        <li class="text">Наклейка на машину</li>
+        <li class="text">
+          Фотосъемка<br />(15 обработанных фотографий оформленных в фотокнигу)
+        </li>
+      </ul>
+      <button class="card-button">Заказать услугу</button>
     </div>
-    <button>Заказать услугу</button>
-  </div>
-</body>
+  </body>
 </html>
