--- a/index.html
+++ b/index.html
@@ -8,17 +8,81 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="block">
-      <div class="item item-1">item-1</div>
-      <div class="item item-2">item-2</div>
-      <div class="item item-3">item-3</div>
-      <div class="item item-4">item-4</div>
-      <div class="item item-5">item-5</div>
-      <div class="item item-1">item-1</div>
-      <div class="item item-2">item-2</div>
-      <div class="item item-3">item-3</div>
-      <div class="item item-4">item-4</div>
-      <div class="item item-5">item-5</div>
+    <h1 class="title">RELATED PRODUCTS</h1>
+    <div class="container">
+      <div class="card card-1">
+        <img src="img/image.png" alt="image" class="card-image" />
+        <div class="card-info">
+          <h3 class="card-title">Apple Macbook Pro</h3>
+          <span class="card-price"
+            >$499.
+            <span class="card-price-crossed">$599</span>
+          </span>
+        </div>
+      </div>
+
+      <div class="card card-2">
+        <img src="img/image.png" alt="image" class="card-image" />
+        <h2 class="card-title">Apple Macbook Pro</h2>
+        <span class="card-price"
+          >$499.
+          <span class="card-price-crossed">$599</span>
+        </span>
+      </div>
+
+      <div class="card card-3">
+        <img src="img/image.png" alt="image" class="card-image" />
+        <h2 class="card-title">Apple Macbook Pro</h2>
+        <span class="card-price"
+          >$499.
+          <span class="card-price-crossed">$599</span>
+        </span>
+      </div>
+
+      <div class="card card-4">
+        <img src="img/image.png" alt="image" class="card-image" />
+        <h2 class="card-title">Apple Macbook Pro</h2>
+        <span class="card-price"
+          >$499.
+          <span class="card-price-crossed">$599</span>
+        </span>
+      </div>
+
+      <div class="card card-5">
+        <img src="img/image.png" alt="image" class="card-image" />
+        <h2 class="card-title">Apple Macbook Pro</h2>
+        <span class="card-price"
+          >$499.
+          <span class="card-price-crossed">$599</span>
+        </span>
+      </div>
+
+      <div class="card card-6">
+        <img src="img/image.png" alt="image" class="card-image" />
+        <h2 class="card-title">Apple Macbook Pro</h2>
+        <span class="card-price"
+          >$499.
+          <span class="card-price-crossed">$599</span>
+        </span>
+      </div>
+
+      <div class="card card-7">
+        <img src="img/image.png" alt="image" class="card-image" />
+        <h2 class="card-title">Apple Macbook Pro</h2>
+        <span class="card-price"
+          >$499.
+          <span class="card-price-crossed">$599</span>
+        </span>
+      </div>
+
+      <div class="card card-8">
+        <img src="img/image.png" alt="image" class="card-image" />
+        <h2 class="card-title">Apple Macbook Pro</h2>
+        <span class="card-price"
+          >$499.
+          <span class="card-price-crossed">$599</span>
+        </span>
+      </div>
     </div>
   </body>
 </html>
