--- a/index.html
+++ b/index.html
@@ -1,72 +1,66 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Book site</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header class="header">
-    <div class="header-container">
-      <span class="logo">Книжный</span>
-      <nav class="nav">
-        <a href="#" class="nav-link">Бестселлеры</a>
-        <a href="#" class="nav-link">Подборки</a>
-        <a href="#" class="nav-link">Авторы</a>
-        <a href="#" class="nav-link">Дайджест</a>
-        <a href="#" class="nav-link">Подписка</a>
-        <a href="#" class="nav-link">Выбор редакции</a>
-      </nav>
-      <a href="#" class="login">Личный кабинет</a>
-    </div>
-    <!-- /.header-container -->
-  </header>
-  <!-- /.header -->
-
-  <section class="hero">
-    <div class="hero-container">
-      <img class="hero-image" src="img/book.png"/>
-      <div class="hero-text">
-        <span class="author">Артем Исламов</span>
-        <h1 class="title">Путь фрилансера</h1>
-        <span class="subtitle">Поколение людей, работающих в интернете</span>
-        <div class="info">
-          <span class="date info-text">Год выпуска: 2019</span>
-          <span class="format info-text">Формат издания: 145х2015</span>
-          <span class="type info-text">Тип обложки: мягкая</span>
-          <span class="age info-text">Возрастные ограничения: 12+</span>
-        </div>
-        <!-- /.info -->
-        <div class="price">
-          <span class="price-tag">490 ₽</span>
-          <a href="#" class="favorites">Добавить в избранное</a>
-        </div>
-        <!-- /.price -->
-        <div class="buttons">
-          <button class="button button-primary">Читать отрывок</button>
-          <a class="button button-outline" href="#">Купить книгу</a>
-        </div>
-        <!-- /.buttons -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Book site</title>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="header-container">
+        <span class="logo">Книжный</span>
+        <nav class="nav">
+          <a href="#" class="nav-link">Бестселлеры</a>
+          <a href="#" class="nav-link">Подборки</a>
+          <a href="#" class="nav-link">Авторы</a>
+          <a href="#" class="nav-link">Дайджест</a>
+          <a href="#" class="nav-link">Подписка</a>
+          <a href="#" class="nav-link">Выбор редакции</a>
+        </nav>
+        <a href="#" class="login">Личный кабинет</a>
       </div>
-    </div>
-    <!-- /.hero-container -->
-  </section>
-  <!-- /.hero -->
+      <!-- /.header-container -->
+    </header>
+    <!-- /.header -->
 
-  <section class="about">
+    <section class="hero">
+      <div class="hero-container">
+        <img class="hero-image" alt="hero-image" src="img/book.png" />
+        <div class="hero-text">
+          <span class="author">Артем Исламов</span>
+          <h1 class="title">Путь фрилансера</h1>
+          <span class="subtitle">Поколение людей, работающих в интернете</span>
+          <div class="info">
+            <span class="date info-text">Год выпуска: 2019</span>
+            <span class="format info-text">Формат издания: 145х2015</span>
+            <span class="type info-text">Тип обложки: мягкая</span>
+            <span class="age info-text">Возрастные ограничения: 12+</span>
+          </div>
+          <!-- /.info -->
+          <div class="price">
+            <span class="price-tag">490 ₽</span>
+            <a href="#" class="favorites">Добавить в избранное</a>
+          </div>
+          <!-- /.price -->
+          <div class="buttons">
+            <button class="button button-primary">Читать отрывок</button>
+            <a class="button button-outline" href="#">Купить книгу</a>
+          </div>
+          <!-- /.buttons -->
+        </div>
+      </div>
+      <!-- /.hero-container -->
+    </section>
+    <!-- /.hero -->
 
-  </section>
-  <!-- /.about -->
+    <section class="about"></section>
+    <!-- /.about -->
 
-  <section class="readers">
-
-  </section>
-  <!-- /.readers -->
-  <footer class="footer">
-
-  </footer>
-  <!-- /.footer -->
-</body>
+    <section class="readers"></section>
+    <!-- /.readers -->
+    <footer class="footer"></footer>
+    <!-- /.footer -->
+  </body>
 </html>
