--- a/index.html
+++ b/index.html
@@ -55,10 +55,14 @@
     </section>
     <!-- /.hero -->
 
-    <section class="about"></section>
+    <section class="about">
+      <h2>1</h2>
+    </section>
     <!-- /.about -->
 
-    <section class="readers"></section>
+    <section class="readers">
+      <h2>2</h2>
+    </section>
     <!-- /.readers -->
     <footer class="footer"></footer>
     <!-- /.footer -->
