--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book site local</title>
+    <title>Book site hosting</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -60,12 +62,48 @@
     <!-- /.hero -->
 
     <section class="about">
-      <h2>1</h2>
+      <div class="about-container">
+        <div class="about-book">
+          <h2 class="section-title">О книге</h2>
+          <p class="about-text">
+            Ключ от свободы скрыт в книжном магазине. Данное произведение —
+            золотой ключ от двери с надписью «Фриланс».
+          </p>
+          <p class="about-text">
+            Это история сильной личности, выковавшей себя из камня. Это глубоко,
+            честно и про каждого из нас. С первых страниц автор затрагивает
+            струны души тех самых людей, которые захотели жить по-другому. И
+            самое уникальное то, что в книге раскрыт подробный план к действиям.
+            Читателю лишь хочется пожелать пристегнуться, прежде чем
+            перелистнуть страницу.
+          </p>
+        </div>
+        <!-- /.about-book -->
+        <div class="about-author">
+          <img src="img/author.jpg" alt="img: author" class="author-avatar" />
+          <div class="author-bio">
+            <h3 class="author-name">Артем Исламов</h3>
+            <a href="https://tapid.pro/islamovartem" class="author-link"
+              >https://tapid.pro/islamovartem</a
+            >
+          </div>
+          <p class="author-text">
+            Автор ютуб канала Glo Academy. Фрилансер, веб разработчик и веб
+            дизайнер. Преподаватель онлайн-курсов по веб разработке для
+            начинающих
+          </p>
+          <!-- /.author-bio -->
+        </div>
+        <!-- /.about-author -->
+      </div>
+      <!-- /.about-container -->
     </section>
     <!-- /.about -->
 
     <section class="readers">
-      <h2>2</h2>
+      <div class="readers-container section-container">
+        <h2 class="section-title">Читатели</h2>
+      </div>
     </section>
     <!-- /.readers -->
     <footer class="footer"></footer>
