--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book site hosting</title>
+    <title>Book site local</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link
@@ -102,7 +102,21 @@
 
     <section class="readers">
       <div class="readers-container section-container">
-        <h2 class="section-title">Читатели</h2>
+        <h2 class="section-title readers-title">Читатели</h2>
+        <div class="readers-images">
+          <img src="img/img1.png" alt="" class="readers-image" />
+          <img src="img/img2.png" alt="" class="readers-image" />
+          <img src="img/img3.png" alt="" class="readers-image" />
+          <img src="img/img4.png" alt="" class="readers-image" />
+          <img src="img/img5.png" alt="" class="readers-image" />
+          <img src="img/img6.png" alt="" class="readers-image" />
+          <img src="img/img7.png" alt="" class="readers-image" />
+          <img src="img/img8.png" alt="" class="readers-image" />
+          <img src="img/img9.png" alt="" class="readers-image" />
+          <img src="img/img10.png" alt="" class="readers-image" />
+          <img src="img/img11.png" alt="" class="readers-image" />
+          <img src="img/img12.png" alt="" class="readers-image" />
+        </div>
       </div>
     </section>
     <!-- /.readers -->
