--- a/index.html
+++ b/index.html
@@ -104,18 +104,18 @@
       <div class="readers-container section-container">
         <h2 class="section-title readers-title">Читатели</h2>
         <div class="readers-images">
-          <img src="img/img1.png" alt="" class="readers-image" />
-          <img src="img/img2.png" alt="" class="readers-image" />
-          <img src="img/img3.png" alt="" class="readers-image" />
-          <img src="img/img4.png" alt="" class="readers-image" />
-          <img src="img/img5.png" alt="" class="readers-image" />
-          <img src="img/img6.png" alt="" class="readers-image" />
-          <img src="img/img7.png" alt="" class="readers-image" />
-          <img src="img/img8.png" alt="" class="readers-image" />
-          <img src="img/img9.png" alt="" class="readers-image" />
-          <img src="img/img10.png" alt="" class="readers-image" />
-          <img src="img/img11.png" alt="" class="readers-image" />
-          <img src="img/img12.png" alt="" class="readers-image" />
+          <img src="img/img-1.png" alt="img" class="readers-image" />
+          <img src="img/img-2.png" alt="img" class="readers-image" />
+          <img src="img/img-3.png" alt="img" class="readers-image" />
+          <img src="img/img-4.png" alt="img" class="readers-image" />
+          <img src="img/img-5.png" alt="img" class="readers-image" />
+          <img src="img/img-6.png" alt="img" class="readers-image" />
+          <img src="img/img-7.png" alt="img" class="readers-image" />
+          <img src="img/img-8.png" alt="img" class="readers-image" />
+          <img src="img/img-9.png" alt="img" class="readers-image" />
+          <img src="img/img-10.png" alt="img" class="readers-image" />
+          <img src="img/img-11.png" alt="img" class="readers-image" />
+          <img src="img/img-12.png" alt="img" class="readers-image" />
         </div>
       </div>
     </section>
