--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book site local</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <title>Book site server</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -64,8 +64,8 @@
     <section class="about">
       <div class="about-container">
         <div class="about-book">
-          <h2 class="section-title">О книге</h2>
-          <p class="about-text">
+          <h2 class="section-title about-title">О книге</h2>
+          <p class="about-text about-text-top">
             Ключ от свободы скрыт в книжном магазине. Данное произведение —
             золотой ключ от двери с надписью «Фриланс».
           </p>
