--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-container">
+      <div class="header-container container">
         <span class="logo">Книжный</span>
         <nav class="nav">
           <a href="#" class="nav-link">Бестселлеры</a>
@@ -32,7 +32,7 @@
     <!-- /.header -->
 
     <section class="hero">
-      <div class="hero-container">
+      <div class="hero-container container">
         <div class="image-block">
           <img class="hero-image" alt="hero-image" src="img/book.png" />
           <span class="sale-label">Скидка 30%</span>
@@ -41,7 +41,7 @@
         <div class="hero-text">
           <span class="author">Артем Исламов</span>
           <h1 class="title">Путь фрилансера</h1>
-          <span class="subtitle">Поколение людей, работающих в интернете</span>
+          <span class="subtitle">Поколение людей, работающих в &nbsp;интернете</span>
           <div class="info">
             <span class="date info-text">Год выпуска: 2019</span>
             <span class="format info-text">Формат издания: 145х2015</span>
@@ -66,7 +66,7 @@
     <!-- /.hero -->
 
     <section class="about">
-      <div class="about-container">
+      <div class="about-container container">
         <div class="about-book">
           <h2 class="section-title about-title">О книге</h2>
           <p class="about-text about-text-top">
@@ -76,10 +76,10 @@
           <p class="about-text">
             Это история сильной личности, выковавшей себя из камня. Это глубоко,
             честно и про каждого из нас. С первых страниц автор затрагивает
-            струны души тех самых людей, которые захотели жить по-другому. И
-            самое уникальное то, что в книге раскрыт подробный план к действиям.
+            струны души тех самых людей, которые захотели жить по-другому.  И
+            самое уникальное то, что в книге раскрыт подробный план к действиям.<span>
             Читателю лишь хочется пожелать пристегнуться, прежде чем
-            перелистнуть страницу.
+            перелистнуть страницу.</span>
           </p>
         </div>
         <!-- /.about-book -->
@@ -105,7 +105,7 @@
     <!-- /.about -->
 
     <section class="readers">
-      <div class="readers-container section-container">
+      <div class="readers-container container">
         <h2 class="section-title readers-title">Читатели</h2>
         <div class="readers-images">
           <img src="img/img-1.png" alt="img" class="readers-image" />
@@ -125,7 +125,7 @@
     </section>
     <!-- /.readers -->
     <footer class="footer">
-      <div class="footer-container">
+      <div class="footer-container container">
         <div class="requisites">
           <h3 class="footer-title">Реквизиты</h3>
           <ul class="footer-list">
