--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
           <!-- /.info -->
           <div class="price">
             <span class="price-tag">490 ₽</span>
-            <a href="#" class="favorites">Добавить в избранное</a>
+            <a href="#" class="favorites">
+              <img class="heart-icon" src="img/heart.png" alt="heart">
+              <span class="favourites-text">Добавить в избранное</span>
+            </a>
           </div>
           <!-- /.price -->
           <div class="buttons">
@@ -88,7 +91,7 @@
           <div class="author-bio">
             <h3 class="author-name">Артем Исламов</h3>
             <a href="https://tapid.pro/islamovartem" class="author-link"
-              >https://tapid.pro/islamovartem</a
+              ><span>https://</span>tapid.pro/islamovartem</a
             >
           </div>
           <p class="author-text">
