--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <div class="hero-text">
           <span class="author">Артем Исламов</span>
           <h1 class="title">Путь фрилансера</h1>
-          <span class="subtitle">Поколение людей, работающих в &nbsp;интернете</span>
+          <span class="subtitle"
+            >Поколение людей, работающих в&nbsp;интернете</span
+          >
           <div class="info">
             <span class="date info-text">Год выпуска: 2019</span>
             <span class="format info-text">Формат издания: 145х2015</span>
@@ -52,7 +54,7 @@
           <div class="price">
             <span class="price-tag">490 ₽</span>
             <a href="#" class="favorites">
-              <img class="heart-icon" src="img/heart.png" alt="heart">
+              <img class="heart-icon" src="img/heart.png" alt="heart" />
               <span class="favourites-text">Добавить в избранное</span>
             </a>
           </div>
@@ -79,10 +81,12 @@
           <p class="about-text">
             Это история сильной личности, выковавшей себя из камня. Это глубоко,
             честно и про каждого из нас. С первых страниц автор затрагивает
-            струны души тех самых людей, которые захотели жить по-другому.  И
-            самое уникальное то, что в книге раскрыт подробный план к действиям.<span>
-            Читателю лишь хочется пожелать пристегнуться, прежде чем
-            перелистнуть страницу.</span>
+            струны души тех самых людей, которые захотели жить по-другому. И
+            самое уникальное то, что в книге раскрыт подробный план к
+            действиям.<span>
+              Читателю лишь хочется пожелать пристегнуться, прежде чем
+              перелистнуть страницу.</span
+            >
           </p>
         </div>
         <!-- /.about-book -->
