--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </div>
           <p class="author-text">
             Автор ютуб канала Glo Academy. Фрилансер, веб разработчик и веб
-            дизайнер. Преподаватель онлайн-курсов по веб разработке для
+            дизайнер. Преподаватель онлайн&#8209;курсов по веб разработке для
             начинающих
           </p>
           <!-- /.author-bio -->
